[gd_scene load_steps=3 format=3 uid="uid://ccjjyvfsdkr8l"]

[ext_resource type="Script" path="res://scripts/game_mode_selector.gd" id="1_8x285"]
[ext_resource type="Texture2D" uid="uid://deyyf8ddc1113" path="res://assets/background.png" id="2_h0cjv"]

[node name="difficulty_selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8x285")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(902, 472)
scale = Vector2(1.798, 1.256)
texture = ExtResource("2_h0cjv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 466.0
offset_top = 291.0
offset_right = 1366.0
offset_bottom = 591.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "   Select Game Mode:"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="pvp" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../pve")
focus_neighbor_right = NodePath("../pve")
focus_next = NodePath("../pve")
focus_previous = NodePath("../pve")
theme_override_font_sizes/font_size = 50
text = "PvP"

[node name="pve" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../pvp")
focus_neighbor_right = NodePath("../pvp")
focus_next = NodePath("../pvp")
focus_previous = NodePath("../pvp")
theme_override_font_sizes/font_size = 50
text = "PvE"

[node name="quit" type="Button" parent="."]
offset_left = 520.0
offset_top = 808.0
offset_right = 1320.0
offset_bottom = 899.0
focus_neighbor_top = NodePath("../options")
focus_neighbor_bottom = NodePath("../start")
focus_next = NodePath("../start")
focus_previous = NodePath("../options")
theme_override_font_sizes/font_size = 60
text = "MENU"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/pvp" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pvp" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pve" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/pve" to="." method="_on_pve_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
